<resources>
    <string name="app_name">Jyotishi</string>
    <string name="Appointment">Take an appointment</string>
    <string name="Select_time">Select time for appointment</string>
    <string name="appointment_date_time">Select appointment date and time</string>
    <string name="appointment_text">Take appointment</string>
    <string name="Appointments">Appointments</string>
    <string name="confirm_appointment">Confirm My Appointment</string>
    <string name="offer">First 30 minutes appointment free , only ₹70/appointment thereafter</string>
    <string name="texty">Butterfly doesn\'t fly</string>
    <string name="mail">Continue with Mail</string>
    <string name="phone">Continue with Phone</string>
    <string name="exit">Exit</string>
    <string name="pp"><u>Privacy Policy</u></string>
    <string name="underlinedClickHere"><u>Resend OTP</u></string>
    <string name="tnc"><u>Terms and Conditions</u></string>
    <string name="profile">Profile</string>
    <string name="signout">Log out</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="agora_app_id">44eb2b3e578b4cd8b07b1438806a4c45</string>
    <string name="access_token"></string>
    <string name="title_activity_vid_call">VidCallActivity</string>
    <string name="signed_in_as">Signed in as: </string>
    <string name="couldnt_sign_in">Couldn\'t Sign In</string>
    <string name="tagline">Video Chat | Best Astrologer</string>
    <string name="code_sent">Code Sent</string>
    <string name="enter_valid_number">Please enter a valid number</string>
    <string name="otp_request_sent">OTP request Sent</string>
    <string name="signed_in">Signed in</string>
    <string name="enter_correct_otp">Please enter the correct OTP</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="otp_request">Request OTP</string>
    <string name="enter_otp">Enter the OTP received</string>
    <string name="didnt_receive_otp">Did not receive the OTP?</string>
    <string name="user_info">User Information</string>
    <string name="both_fields">Please enter both the fields</string>
    <string name="name_enter">Enter your name</string>
    <string name="age_enter">Enter your age</string>
    <string name="proceed">Proceed</string>
    <string name="login_again">Please Login Again</string>
    <string name="logged_out">Logged Out</string>
    <string name="error_occured">An error occurred, please try later</string>
    <string name="exit_question">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="jyotish_profiles">View Jyotish profiles</string>
    <string name="explore_options">Explore Options</string>
    <string name="book_talk">Book an appointment to talk to jyotishji</string>
    <string name="chat">Chat</string>
    <string name="video">Video</string>
    <string name="audio">Voice</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="jyotish_ji">Jyotish Ji</string>
    <string name="type_message">Type a Message</string>
    <string name="change_language">Change Language</string>
    <string name="select_lang">Select a language</string>
    <string name="unable_send">Unable to send message</string>
    <string name="empty_message">Please type a message!</string>
    <string name="chat_cleared">You are not allowed to clear chat.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_comm_lang">Select language for talking with Jyotish</string>
    <string name="langu">Language</string>
    <string name="voiceCalls">Voice Calls</string>
    <string name="videoCalls">Video Calls</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="buypremium">Buy Premium</string>
    <string name="appointments">Appointments</string>
    <string name="blank"> </string>
    <string name="voice_call_logs">Voice Calls Logs</string>
    <string name="premium_benefits">\u2022 Unlimited Video Calling \n\u2022 Unlimited Voice Calling\n\u2022 Choose your own Jyotish \n\u2022 Get priority support</string>
    <string name="time_left">\nYou have 10 minutes of free voice calling left.</string>
    <string name="price">Rs. 50</string>
    <string name="price_duration">for 3 months</string>
    <string name="dialing">Jyotish Ji   <i>dialing</i></string>
    <string name="talking">Jyotish Ji   <i>talking</i></string>
    <string name="paused">Jyotish Ji   <i>paused</i></string>
    <string name="left">Jyotish Ji   <i>left or is offline</i></string>
    <string name="video_call_logs">Video Call Logs</string>
    <string name="no_internet">Slow or no internet connection.\nPlease check your internet settings.</string>
</resources>